[tool.poetry]
name = "rkrpi"
version = "0.1.0"
description = ""
authors = ["Timothy Morland <me@timothy-morland.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
